# ViewLog

./: .gitignore  CMakeLists.txt  FolderTree.cpp  FoldetTree.h  MediaPlayer.pro  MediaPlayer.qrc  README.md  ViewLog.qmlproject  ViewLog.qmlproject.qtds  ViewLog.qrc  customtreewidgetitem.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qmlmodules  qtquickcontrols2.conf  todo  todo.txt  videogroupbox.h
assets/: folder_icon.png:Zone.Identifier
content/: App.qml  CMakeLists.txt  CustomMediaPlayer.qml  DurationMenu.qml  FolderTreeView.qml  MediaButton.qml  MediaControls.qml  Screen01.qml  timer.qml
forms/: mainwindow.ui
headers/: FolderTree.h  FoldetTree.h  customtreewidgetitem.h  mainwindow.h  videogroupbox.h
imports/: CMakeLists.txt
imports/ViewLog/: CMakeLists.txt  qmldir
imports/ViewLog/designer/: plugin.metainfo
installer/: installer.nsi
resources/: MediaPlayer.qrc  duration_slider.qml
src/: FolderTree.cpp  customtreewidgetitem.cpp  filestreemodel.cpp  filestreemodel.h  import_qml_plugins.h  main.cpp  mainwindow.cpp  videogroupbox.cpp
